bs-layout: * centered snippets on mobile * set mobile-navbar to fixed position
printess-editor.d.ts:
* useTextAreaSyncOnMobile
* deprecated: getBuyerFrameCountAndClasses
* getBuyerFrameCountAndMarkers
* iExternalimageMeta: added average
* pos - pixel based position for placing a snippet
* MobileUiMenuItems: exchanged removePages with arrangePages
* deprecated iFrameCountAndClasses
* deprecated iFrameCountAndClassesSpread
* iFrameCountAndMarkers

uiHelper:
* adjusted printessDiv styles
* fixed bugs in arrange pages dialog
* exchanged removePages button on mobile with arrangePages button
* hide toolbar if controlHost open and display space too small else keep toolbar visible

--- a/custom-ui/bs-layout.css
+++ b/custom-ui/bs-layout.css
@@ -2497,7 +2497,7 @@ input#invert-image-checker {
 
 .mobile-navbar {
   display: none;
-  position: absolute !important; /* to not be overidden by BS */
+  position: fixed !important; /* to not be overidden by BS; set to fixed instead of absolute, because scale moves navbar out of sight */
   flex-direction: column;
   left: 0;
   top: 0;
@@ -2662,9 +2662,18 @@ input#invert-image-checker {
   .mobile-navbar {
     display: flex;
   }
+  .layout-snippet-cluster {
+    justify-content: center;
+  }
+  .group-snippets {
+    justify-content: center;
+  }
   .group-snippets > .snippet-thumb {
     width: 100px; 
     height: 100px;
+  }
+  .snippet-cluster-name {
+    text-align: center;
   }
   .error-list {
     max-height: calc(100vh - 300px);
